<resources>
    <string name="app_name">攒呗</string>
    <string name="not_network">没有网络连接</string>
    <string name="refresh">刷新</string>
    <string name="home_tab">首页</string>
    <string name="home_tab_">返回</string>
    <string name="home_contact">好友</string>
    <string name="home_im">消息</string>
    <string name="home_task">任务</string>
    <string name="short_video">短视频</string>
    <string name="found_tab">发现</string>
    <string name="search_hint">标题</string>
    <string name="taskDetail">任务详情</string>
    <string name="cancel">取消</string>
    <string name="login_input_phone">输入手机号</string>
    <string name="login_input_pwd">输入密码</string>
    <string name="login_phone_error">手机号码格式错误</string>
    <string name="login_immediately_login">登录</string>
    <string name="login_immediately_register">立即注册</string>
    <string name="more_task">更多任务</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="clear_search">清空历史记录</string>
    <string name="source">来源：%s</string>
    <string name="noData">没有数据</string>
    <string name="morePush">更多推荐</string>
    <string name="canPlay">播放列表</string>
    <string name="before">上一话</string>
    <string name="next">下一话</string>
    <string name="directory">目录</string>
    <string name="progress">进度</string>
    <string name="start_read">开始阅读</string>
    <string name="continue_read">继续阅读</string>
    <string name="before_novel">上一章</string>
    <string name="next_novel">下一章</string>
    <string name="setting">设置</string>
    <string name="light_setting">亮度调节</string>
    <string name="default_setting">默认</string>
    <string name="font_size">字号(%d)</string>
    <string name="vip_parsing">VIP视频解析</string>
    <string name="vip_hint">请填写播放页面的链接</string>
    <string name="vip_start">开始解析</string>
    <string name="vip_search">影片名/演员名</string>
    <string name="vip_do_search">打开影片库</string>
    <string name="vip_url_choose">VIP接口选择:</string>
    <string name="click_login">点击登录</string>
    <string name="wx_login">微信登录</string>
    <string name="rule">《用户协议》</string>
    <string name="rule1">《用户隐私协议》</string>
    <string name="ok_rule">请先同意用户协议，点击可以阅读</string>
    <string name="login">登录</string>
    <string name="channel">频道选择</string>
    <string name="suggestion">反馈</string>
    <string name="about">关于</string>
    <string name="search_task_hint">请输入搜索关键词</string>
    <string name="my_task">我的任务</string>
    <string name="msg_tips">消息通知</string>
    <string name="task_img">提交审核图</string>
    <string name="app_slog">闲着也是闲着，攒点花呗</string>
    <string name="taskStep">任务步骤</string>
    <string name="taskSGuide">任务指引</string>
    <string name="zipImg">图片压缩</string>
    <string name="cooperation">商务合作</string>
    <string name="night_mode">夜间模式</string>
    <string name="day_mode">白天模式</string>
    <string name="news">文章</string>
    <string name="copy">点击复制</string>
    <string name="open_link">打开链接</string>
    <string name="bind">绑定</string>
    <string name="browser">浏览器打开</string>
    <string name="qr_result">扫描结果</string>
    <string name="zan">%s个赞</string>
    <string name="update">检查更新</string>
    <string name="bbs">论坛</string>
    <string name="store">收藏列表</string>
    <string name="login_out">退出登录</string>
    <string name="start_zip">开始压缩</string>
    <string name="push_kg">推送开关(%s)</string>
    <string name="clear_cache">清理缓存</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="user_rule">用户协议</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="about_app">关于APP</string>
    <string name="copy_right">Copyright © %s JHL Inc. All rights reserved.</string>
    <string name="app_service_tips">APP服务说明</string>
    <string name="watch_num">%s 次观看</string>
    <string name="share_app">邀请好友</string>
    <string name="share">分享</string>
    <string name="wx">微信好友</string>
    <string name="wx_circle">朋友圈</string>
    <string name="qq_zone">QQ空间</string>
    <string name="qq">QQ好友</string>
    <string name="qq_qun">QQ群</string>
    <string name="qq_sw">商务合作(复制QQ号码，并打开QQ)</string>
    <string name="qq_js">技术合作(复制QQ号码，并打开QQ)</string>
    <string name="online">在线线路</string>
    <string name="m3u8">m3u8线路</string>
    <string name="default_line">默认线路</string>
    <string name="start_task">开始任务</string>
    <string name="ad">广告</string>
    <string name="like_store">点赞收藏</string>
    <string name="push_time">上映:%s</string>
    <string name="update_time">更新:%s</string>
    <string name="name_points">%s | %d 积分</string>
    <string name="delete">删除</string>
    <string name="best_msg">消息</string>
    <string name="best_gg">公告</string>
    <string name="sign">签到</string>
    <string name="my_jf">我的积分</string>
    <string name="sign_count">共签到</string>
    <string name="has_sign">已连续签到</string>
    <string name="point_rule">查看积分规则</string>
    <string name="sign_now">立即签到</string>
    <string name="sign_count_str">%d 天</string>
    <string name="sign_count_day">第%d天</string>
    <string name="today">今天</string>
    <string name="jf_shop">积分兑换</string>
    <string name="jf">积分</string>
    <string name="ok">确定</string>
    <string name="please_login">请先登录</string>
    <string name="get_the_conditions">领取条件：%s</string>
    <string name="watch_detail">查看详情</string>
    <string name="valid_time">有效时间：%s</string>
    <string name="get_welfare">立即领取</string>
    <string name="long_time">长期有效</string>
    <string name="get_success">领取成功</string>
    <string name="has_get">已经领取</string>
    <string name="welfare_center">福利中心</string>
    <string name="not_yet">暂无</string>
    <string name="exchange">积分兑换</string>
    <string name="rule_tips">提现规则</string>
    <string name="exchange_sale">积分:人民币 100:1</string>
    <string name="user_points">我的余额</string>
    <string name="choose_point">选择提现金额</string>
    <string name="exchange2wechat">提现至微信</string>
    <string name="exchange_detail">提现明细</string>
    <string name="exchange_money">提现</string>
    <string name="exchange_points">抵%d 积分</string>
    <string name="none_txsj">没有提现申请</string>
    <string name="person">个人</string>
    <string name="loginOutSuccess">退出成功</string>
    <string name="clearSuccess">清理完成</string>
    <string name="has_bind">已经绑定:%s</string>
    <string name="inputCode">输入对方的邀请码</string>
    <string name="shareTips">邀请成功得积分</string>
    <string name="sharePerson">您已推广的人数</string>
    <string name="sharePoints">已获得的推广积分</string>
    <string name="shareCode">邀请码</string>
    <string name="shareNoneCode">没有邀请码</string>
    <string name="shareCanSave">可以长按保存到相册</string>
    <string name="saveToPhotos">保存到相册</string>
    <string name="login_tips">登录领福利</string>
    <string name="payment_details">收支明细</string>
    <string name="winning_record">中奖记录 ></string>
    <string name="invite_friends">邀好友 赚赏金</string>
    <string name="invite_friends1">签到，应用和任务都可得积分。</string>
    <string name="userPoints">积分</string>
    <string name="luck_count">今天还有%d次抽奖机会</string>
    <string name="lucky_tip">积分\n抽奖</string>
    <string name="lucky_good">恭喜你抽中</string>
    <string name="lucky_more">签到和任务也可以获得积分哦</string>
    <string name="lucky_go">去兑换</string>
    <string name="go_bind_phone">去绑定手机</string>
    <string name="go_bind_wx">去绑定微信</string>
    <string name="lucky_recode">中奖记录</string>
    <string name="all_game">游戏集合</string>
    <string name="most_game">高积分游戏</string>
    <string name="earn_game">攒积分游戏</string>
    <string name="online_game">在线游戏</string>
    <string name="show_points">%s 积分</string>
    <string name="show_money">%s 元</string>
    <string name="show_ye">余额：%d 积分</string>
    <string name="lucky_title">奖品名称：%s</string>
    <string name="payment_tip">请仔细阅读绑定规则哦~，否则可能提现到不了账</string>
    <string name="payment_tip1">可以在个人中心设置里面修改微信和手机号。</string>
    <string name="payment_gzh">公众号</string>
    <string name="pay">支付</string>
    <string name="payment_wxh">微信号</string>
    <string name="nick_name">昵称</string>
    <string name="copy_flow">关注</string>
    <string name="has_flow">已经关注</string>
    <string name="wx_phone">绑定微信的手机号</string>
    <string name="audit_list">审核列表</string>
    <string name="tx_audit_list">我的兑换</string>
    <string name="exchange_success">兑换成功</string>
    <string name="exchange_success_tips">1到2个工作日返回结果，可在列表查看进度</string>
    <string name="exchange_success_ok">继续赚积分</string>
    <string name="payment_bind">提现信息绑定</string>
    <string name="payment_bind_change_tip">提现信息修改</string>
    <string name="user_name_chang">昵称修改</string>
    <string name="user_icon_chang">头像修改</string>
    <string name="user_bind_zh">绑定账号</string>
    <string name="payment_bind_change">确认修改</string>
    <string name="has_welfare">您有张福利券可以用： %s</string>
    <string name="feature_list">工具列表</string>
    <string name="earn_list">攒钱</string>
    <string name="earn_game_tip">一边游戏一边赚积分</string>
    <string name="earn_game_tip_">游戏任务有大量的积分奖励</string>
    <string name="earn_game_tip1">预计 +1000积分</string>
    <string name="earn_game_tip2">应用下载试玩</string>
    <string name="earn_game_tip2_">试玩完成就有积分哦</string>
    <string name="earn_game_tip3">预计 +500积分</string>
    <string name="earn_game_tip4">浏览文章（%d/%d）</string>
    <string name="earn_game_tip4_">阅读一定时间可以获得积分,一天不能阅读同一篇文章</string>
    <string name="earn_game_tip5">预计 +100积分</string>
    <string name="earn_game_tip6">签到</string>
    <string name="earn_game_tip6_">每天签到都有积分哦</string>
    <string name="earn_game_tip7">预计1~14积分</string>
    <string name="earn_game_tip8">抽奖（%d/%d）</string>
    <string name="earn_game_tip8_">每天花少量积分必中奖哦</string>
    <string name="earn_game_tip9">预计 +5~100积分</string>
    <string name="earn_game_tip10">分享到朋友圈(%d/%d)</string>
    <string name="earn_game_tip10_">每天分享的链接有人打开才有积分哦</string>
    <string name="earn_game_tip11">预计 +20积分</string>
    <string name="earn_game_tip12">看视频赚钱（%d/%d）</string>
    <string name="earn_game_tip12_">看完视频领取奖励,隔10分钟才能看一次。</string>
    <string name="earn_game_tip13">预计40积分</string>
    <string name="add_points">+ %d 积分</string>
    <string name="movie_area_filter">地区筛选</string>
    <string name="movie_type_filter">类型筛选</string>
    <string name="earn_game_tip12_tip">%s秒后可观看</string>
    <string name="has_bind_list">邀请明细</string>
    <string name="permission_dialog">需要下列权限才能正常使用</string>
    <string name="permission_dialog1">读取手机/电话状态权限</string>
    <string name="permission_dialog2">防止账号被盗和账号找回</string>
    <string name="permission_dialog3">存储权限</string>
    <string name="permission_dialog4">缓存数据，降低流量和提高加载速度。</string>
    <string name="reg_register">注册</string>
    <string name="reg_input_phone">请输入您的手机号</string>
    <string name="reg_input_code">请输入验证码</string>
    <string name="reg_input_pwd_1">8-16位的字母加数字组成</string>
    <string name="reg_input_pwd_2">请确认密码</string>
    <string name="reg_register_and_login">注册并登陆</string>
    <string name="reg_get_code">获取验证码</string>
    <string name="reg_get_code_again">重新获取</string>
    <string name="reg_pwd_error">密码不一致</string>
    <string name="reg_register_ing">注册中</string>
    <string name="find_pwd_and_login">立即找回</string>
    <string name="phone_error">手机号码错误</string>
    <string name="find_pwd">找回密码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="bind_phone_do">立即绑定</string>
    <string name="hot_push">热门推荐</string>
    <string name="new_push">搞笑视频</string>
    <string name="home_item_0">每日打卡</string>
    <string name="home_item_0_">连续7天有惊喜</string>
    <string name="home_item_1">幸运转盘</string>
    <string name="home_item_1_">必中积分哦</string>
    <string name="home_item_2">资源搜索</string>
    <string name="home_item_2_">想到想不到的都有</string>
    <string name="app_guide">使用教程</string>
    <string name="beast_news">文章阅读</string>
    <string name="taskStep0">领取任务</string>
    <string name="taskStep01">阅读规则完后，满足条件点击领取任务后才能提交任务。</string>
    <string name="taskStep1">按要求操作</string>
    <string name="taskStep11">按照任务步骤操作，并提交正确的数据或截图。</string>
    <string name="taskStep2">正确提交</string>
</resources>