<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"/>
    <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:text="5.2.3"
            android:textSize="@dimen/bar_title"
            android:layout_marginBottom="40dp"
            android:textColor="@color/text_gray"/>
    <TextView
            android:id="@+id/user_rule"
            style="@style/user_set"
            android:padding="@dimen/ten"
            android:text="@string/user_rule"
            android:textColor="@color/text"
            android:drawableEnd="@drawable/ic_right"/>
    <TextView
            android:id="@+id/user_privacy"
            style="@style/user_set"
            android:padding="@dimen/ten"
            android:text="@string/privacy_agreement"
            android:textColor="@color/text"
            android:drawableEnd="@drawable/ic_right"/>
    <TextView
            android:id="@+id/about"
            style="@style/user_set"
            android:layout_marginTop="@dimen/ten"
            android:padding="@dimen/ten"
            android:text="@string/about_app"
            android:textColor="@color/text"
            android:drawableEnd="@drawable/ic_right"/>
    <TextView
            android:id="@+id/textView"
            style="@style/user_set"
            android:layout_marginTop="20dp"
            android:padding="@dimen/ten"
            android:text="@string/update"
            android:drawableEnd="@drawable/ic_right"/>

    <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    <TextView
            android:id="@+id/copy_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:text="@string/copy_right"
            android:layout_marginBottom="20dp"
            android:textColor="@color/text_gray"/>
</LinearLayout>