<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/user_name"
        style="@style/user_set"
        android:drawableEnd="@drawable/ic_right"
        android:padding="@dimen/ten"
        android:text="@string/user_name_chang"
        app:layout_constraintTop_toBottomOf="@+id/payment_details" />

    <TextView
        android:id="@+id/user_icon"
        style="@style/user_set"
        android:drawableEnd="@drawable/ic_right"
        android:padding="@dimen/ten"
        android:text="@string/user_icon_chang"
        app:layout_constraintTop_toBottomOf="@+id/payment_details" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/user_bind"
            style="@style/user_set"
            android:drawableEnd="@drawable/ic_right"
            android:padding="@dimen/ten"
            android:text="@string/user_bind_zh"
            app:layout_constraintTop_toBottomOf="@+id/payment_details" />
        <TextView
            android:id="@+id/user_bind_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="45dp"
            android:textSize="@dimen/small_text"
            android:textColor="@color/text_gray1"
            android:layout_gravity="center_vertical|right"/>
    </FrameLayout>


    <TextView
        android:id="@+id/payment_bind"
        style="@style/user_set"
        android:drawableEnd="@drawable/ic_right"
        android:padding="@dimen/ten"
        android:text="@string/payment_bind_change_tip"
        app:layout_constraintTop_toBottomOf="@+id/payment_details" />
</LinearLayout>