<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:src="@drawable/exchange_success"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/exchange_success"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten"
            android:textColor="@color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bar_title"
            android:text="@string/exchange_success_tips"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_gray"/>
    <Button
            android:id="@+id/ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/exchange_success_ok"
            android:textColor="@color/white"
            android:background="@drawable/shape_exchange_success"/>
</LinearLayout>