<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/light_dark"
        style="@style/user_set"
        android:padding="@dimen/ten"
        android:text="@string/night_mode"
        app:layout_constraintTop_toBottomOf="@+id/store"
        app:switchPadding="@dimen/ten" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/push"
        style="@style/user_set"
        android:layout_marginTop="20dp"
        android:padding="@dimen/ten"
        android:text="@string/push_kg"
        android:textColor="@color/text"
        app:switchPadding="@dimen/ten" />

    <RelativeLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/ten"
            android:text="@string/clear_cache"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:padding="@dimen/ten"
            android:text="0M"
            android:textColor="@color/text_gray" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_out"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_button"
        android:text="@string/login_out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>