<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten"
                android:background="@drawable/shape_lucky">
            <TextView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/lucky_tip"
                    android:layout_marginLeft="20dp"
                    android:paddingBottom="@dimen/ten"
                    android:textColor="@color/white"
                    android:background="@drawable/lucky_tcs"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:text="@string/lucky_good"/>
            <TextView
                    android:id="@+id/user_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange1"
                    android:textSize="22sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="5积分"/>
            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/lucky_jf"
                    android:layout_marginTop="120dp"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="280dp"
                    android:text="@string/lucky_more"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ok"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="330dp"
                    android:textColor="@color/white"
                    android:text="@string/lucky_go"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/shape_lucky_dh"
                    android:layout_gravity="center_horizontal"/>
        </FrameLayout>
    <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_update_close"/>
</LinearLayout>